更新交换链和多重采样设置等

--- a/IrisEngine/IrisEngine.vcxproj
+++ b/IrisEngine/IrisEngine.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -141,6 +141,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Config\EngineRenderConfig.h" />
+    <ClInclude Include="Engine\Debug\EngineDebug.h" />
     <ClInclude Include="Engine\Debug\Log\SimpleLog.h" />
     <ClInclude Include="Engine\EngineFactory.h" />
     <ClInclude Include="Engine\Core\Engine.h" />
@@ -197,6 +199,8 @@
     <ClInclude Include="Engine\Core\WinMainCommandParameters.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Config\EngineRenderConfig.cpp" />
+    <ClCompile Include="Engine\Debug\EngineDebug.cpp" />
     <ClCompile Include="Engine\EngineFactory.cpp" />
     <ClCompile Include="Engine\Core\Engine.cpp" />
     <ClCompile Include="Engine\IrisEngine.cpp" />
