--- a/IrisEngine/IrisEngine.vcxproj.filters
+++ b/IrisEngine/IrisEngine.vcxproj.filters
@@ -186,6 +186,12 @@
     <ClInclude Include="Rendering\DirectX12\d3dx12.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Engine\Mesh\Mesh.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Rendering\Core\Rendering.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="simple_library\private\simple_channel\simple_net_drive\simple_net_drive.cpp">
@@ -306,6 +312,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Config\EngineRenderConfig.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Mesh\Mesh.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Rendering\Core\Rendering.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
