--- a/IrisEngine/IrisEngine.vcxproj
+++ b/IrisEngine/IrisEngine.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -206,7 +206,7 @@
     <ClInclude Include="Engine\Core\WinMainCommandParameters.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Config\EngineRenderConfig.cpp" />
+    <ClCompile Include="Engine\Config\EngineRenderConfig.cpp" />
     <ClCompile Include="Engine\Debug\EngineDebug.cpp" />
     <ClCompile Include="Engine\EngineFactory.cpp" />
     <ClCompile Include="Engine\Core\Engine.cpp" />
