--- a/IrisEngine/IrisEngine.vcxproj
+++ b/IrisEngine/IrisEngine.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -142,6 +142,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Config\EngineRenderConfig.h" />
+    <ClInclude Include="Engine\CodeReflection\CodeReflectionMacroTag.h" />
+    <ClInclude Include="Engine\Component\Core\Component.h" />
+    <ClInclude Include="Engine\Component\InputComponent.h" />
+    <ClInclude Include="Engine\Component\Input\InputType.h" />
+    <ClInclude Include="Engine\Component\TransformationComponent.h" />
+    <ClInclude Include="Engine\Core\Camera.h" />
+    <ClInclude Include="Engine\Core\CoreObject\CoreMinimalObject.h" />
+    <ClInclude Include="Engine\Core\CoreObject\GuidInterface.h" />
+    <ClInclude Include="Engine\Core\Viewport.h" />
+    <ClInclude Include="Engine\Core\World.h" />
     <ClInclude Include="Engine\Debug\EngineDebug.h" />
     <ClInclude Include="Engine\Debug\Log\SimpleLog.h" />
     <ClInclude Include="Engine\EngineFactory.h" />
@@ -149,11 +159,24 @@
     <ClInclude Include="Engine\EngineMinimal.h" />
     <ClInclude Include="Engine\Math\EngineMath.h" />
     <ClInclude Include="Engine\Mesh\BoxMesh.h" />
+    <ClInclude Include="Engine\Mesh\ConeMesh.h" />
     <ClInclude Include="Engine\Mesh\Core\Mesh.h" />
+    <ClInclude Include="Engine\Mesh\Core\MeshManage.h" />
     <ClInclude Include="Engine\Mesh\Core\MeshType.h" />
+    <ClInclude Include="Engine\Mesh\Core\ObjectTransformation.h" />
+    <ClInclude Include="Engine\Mesh\CustomMesh.h" />
+    <ClInclude Include="Engine\Mesh\CylinderMesh.h" />
+    <ClInclude Include="Engine\Mesh\PlaneMesh.h" />
+    <ClInclude Include="Engine\Mesh\SphereMesh.h" />
     <ClInclude Include="Engine\Platform\Windows\WindowsEngine.h" />
     <ClInclude Include="Engine\Platform\Windows\WindowsMessageProcessing.h" />
+    <ClInclude Include="Engine\Platform\Windows\WindowsPlatform.h" />
     <ClInclude Include="Engine\Rendering\Core\Rendering.h" />
+    <ClInclude Include="Engine\Rendering\Core\RenderingResourcesUpdate.h" />
+    <ClInclude Include="Engine\Rendering\Enigne\Core\RenderingEngine.h" />
+    <ClInclude Include="Engine\Rendering\Enigne\DirectX\Core\DirectXRenderingEngine.h" />
+    <ClInclude Include="Engine\Rendering\Enigne\DirectX\DirectX11RenderingEngine.h" />
+    <ClInclude Include="Engine\Rendering\Enigne\DirectX\DirectX12RenderingEngine.h" />
     <ClInclude Include="Engine\Shader\Core\Shader.h" />
     <ClInclude Include="Rendering\DirectX12\d3dx12.h" />
     <ClInclude Include="simple_library\private\simple_channel\simple_net_connetion\simple_connetion_tcp.h" />
@@ -206,18 +229,39 @@
     <ClInclude Include="Engine\Core\WinMainCommandParameters.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Engine\Component\Core\Component.cpp" />
+    <ClCompile Include="Engine\Component\InputComponent.cpp" />
+    <ClCompile Include="Engine\Component\Input\InputType.cpp" />
+    <ClCompile Include="Engine\Component\TransformationComponent.cpp" />
     <ClCompile Include="Engine\Config\EngineRenderConfig.cpp" />
+    <ClCompile Include="Engine\Core\Camera.cpp" />
+    <ClCompile Include="Engine\Core\CoreObject\CoreMinimalObject.cpp" />
+    <ClCompile Include="Engine\Core\CoreObject\GuidInterface.cpp" />
+    <ClCompile Include="Engine\Core\Viewport.cpp" />
+    <ClCompile Include="Engine\Core\World.cpp" />
     <ClCompile Include="Engine\Debug\EngineDebug.cpp" />
     <ClCompile Include="Engine\EngineFactory.cpp" />
     <ClCompile Include="Engine\Core\Engine.cpp" />
     <ClCompile Include="Engine\IrisEngine.cpp" />
     <ClCompile Include="Engine\Math\EngineMath.cpp" />
     <ClCompile Include="Engine\Mesh\BoxMesh.cpp" />
+    <ClCompile Include="Engine\Mesh\ConeMesh.cpp" />
     <ClCompile Include="Engine\Mesh\Core\Mesh.cpp" />
+    <ClCompile Include="Engine\Mesh\Core\MeshManage.cpp" />
     <ClCompile Include="Engine\Mesh\Core\MeshType.cpp" />
+    <ClCompile Include="Engine\Mesh\Core\ObjectTransformation.cpp" />
+    <ClCompile Include="Engine\Mesh\CustomMesh.cpp" />
+    <ClCompile Include="Engine\Mesh\CylinderMesh.cpp" />
+    <ClCompile Include="Engine\Mesh\PlaneMesh.cpp" />
+    <ClCompile Include="Engine\Mesh\SphereMesh.cpp" />
     <ClCompile Include="Engine\Platform\Windows\WindowsEngine.cpp" />
     <ClCompile Include="Engine\Platform\Windows\WindowsMessageProcessing.cpp" />
     <ClCompile Include="Engine\Rendering\Core\Rendering.cpp" />
+    <ClCompile Include="Engine\Rendering\Core\RenderingResourcesUpdate.cpp" />
+    <ClCompile Include="Engine\Rendering\Enigne\Core\RenderingEngine.cpp" />
+    <ClCompile Include="Engine\Rendering\Enigne\DirectX\Core\DirectXRenderingEngine.cpp" />
+    <ClCompile Include="Engine\Rendering\Enigne\DirectX\DirectX11RenderingEngine.cpp" />
+    <ClCompile Include="Engine\Rendering\Enigne\DirectX\DirectX12RenderingEngine.cpp" />
     <ClCompile Include="Engine\Shader\Core\Shader.cpp" />
     <ClCompile Include="simple_library\private\simple_channel\simple_io_stream\simple_io_stream.cpp" />
     <ClCompile Include="simple_library\private\simple_channel\simple_net_channel\simple_channel.cpp" />
